bio-seq-derive/tests/fail/invalid_codec.stderr
error: Codec can only be derived for enums
 --> tests/fail/invalid_codec.rs:4:1
  |
4 | / struct NotEnum {
5 | |     a: (),
6 | |     c: (),
7 | |     g: (),
8 | |     t: (),
9 | | }
  | |_^

error: Codec derivations require discriminants
  --> tests/fail/invalid_codec.rs:13:5
   |
13 |     A,
   |     ^

error: Bit width is not large enough encode all variants (min: 3)
  --> tests/fail/invalid_codec.rs:20:1
   |
20 | #[bits(2)]
   | ^^^^^^^^^^

error: Codec derivations require byte or integer discriminants
  --> tests/fail/invalid_codec.rs:36:5
   |
36 |     X = 1.0,
   |     ^

error[E0308]: mismatched types
  --> tests/fail/invalid_codec.rs:36:9
   |
36 |     X = 1.0,
   |         ^^^ expected `isize`, found floating-point number
